--- a/css/style.css
+++ b/css/style.css
@@ -412,20 +412,55 @@ button:hover {
 /* JSON Yönetici sayfası için still*/
 
 #json-container {
-    max-width: 800px;
-    margin: 0 auto;
-    background: #f4f4f4;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
 }
 
-#json-container label {
+.left-column{
+    width: 30%;
+    padding: 10px;
+    background: #f4f4f4;
+    border-right: 1px solid #ddd;
+}
+
+.right-column {
+    width: 70%;
+    padding: 10px;
+}
+
+#json-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+#json-list li {
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background: #eee;
+    margin-bottom: 5px;
+}
+
+#json-list li button {
+    background: #333;
+    color: #fff;
+    border:none;
+    padding: 5px 10px;
+    cursor: pointer;
+
+}
+
+#json-list li button:hover {
+    background: #555;
+}
+
+#json-form label {
     display: block;
     margin-top: 10px;
 }
 
-#json-container input[type = "text"],
-#json-container textarea {
+#json-form input[type="text"],
+#json-form textarea {
     width: 100%;
     padding: 10px;
     margin-top: 5px;
@@ -433,11 +468,11 @@ button:hover {
     border-radius: 4px;
 }
 
-#json-container textarea.editor {
+#json-form textarea.editor {
     height: 200px;
 }
 
-#json-container button {
+#json-form button {
     padding: 10px 20px;
     background: #333;
     color: #fff;
@@ -446,7 +481,6 @@ button:hover {
     margin-top: 10px;
 }
 
-
-#json-container button:hover {
+#json-form button:hover {
     background: #555;
 }
