--- a/css/style.css
+++ b/css/style.css
@@ -28,34 +28,27 @@
     pointer-events: none;
 }
 
-.navbar a {
-    font-size: 18px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    margin-right: 40px;
-}
+
+
+
 
 .navbar .btnLogin-popup {
     position: relative;
     background: transparent;
     border: none;
     outline: none;
-    font-size: 19px;
+    font-size: 40px;
     color: #fff;
-    font-weight: 500;
+    font-weight: 800;
     cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
 }
 
-.navbar .btnLogin-popup::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -4px;
-    width: 100%;
-    height: 2px;
-    background: #fff;
-    opacity: .85;
+.navbar .btnLogin-popup:hover {
+    background: #333;
+    color: #fff;
 }
 
 .section {
@@ -63,6 +56,9 @@
     background: url("../image/apiBlog.png") no-repeat;
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .wrapper {
@@ -71,7 +67,7 @@
     right: 0;
     width: 450px;
     height: 100%;
-    background: transparent;
+    background: rgba(0, 0, 0, .2);
     backdrop-filter: blur(15px);
     box-shadow: -1px 0 10px rgba(0, 0, 0, .2);
     border-left: 2px solid rgba(255, 255, 255, .1);
@@ -80,14 +76,10 @@
     justify-content: center;
     flex-direction: column;
     padding: 0 40px;
-    opacity: 0;
-    pointer-events: none;
+    
 }
 
-.wrapper.active-popup {
-    opacity: 1;
-    pointer-events: auto;
-}
+
 
 .icon-close {
     position: absolute;
@@ -298,12 +290,13 @@ body {
     background: #789cc0df;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px; /*Add a top margin to the container*/
+    margin-top: 100px; /*Add a top margin to the container*/
 }
 
 h1 {
     text-align: center;
     color: #fff;
+    margin-top: 80px;
 }
 
 input[type="text"] {
@@ -409,6 +402,20 @@ button:hover {
 }
 
 .modal-content button:hover{
+    background: #555;
+}
+
+#go-to-json-btn {
+    background: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+#go-to-json-btn:hover {
     background: #555;
 }
 
@@ -523,4 +530,18 @@ button:hover {
     border: 1px solid #ddd; /*Sınır ekle */
     border-radius: 4px;
     box-sizing: border-box;
+}
+
+#back-to-projects-btn {
+    background: #555;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+#back-to-projects-btn:hover {
+    background: #333;
 }
